# pika-async-example

./: README.md  log_config.yaml  mypy.ini  pyproject.toml
app/: __init__.py  configuration.py  example_consumer.py  new_task.py  worker_async.py
app/extensions/: __init__.py
app/models/: __init__.py  channel_options.py  connection_options.py  queue_options.py  stop_flag.py
app/services/: message_publishing_service.py
app/services/worker_thread_manager/: __init__.py  _worker_thread.py  _worker_thread_manager.py
