[project]
name = "pika-async-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Wegman",email = "kevinwegman1993@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.116.1"}
uvicorn = "^0.35.0"
aio-pika = "^9.5.7"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
py_version = 312
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_between_sections = 1
lines_between_types = 1
known_first_party = ["app"]

